--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,25 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "userator",
-            "email": "userator@ya.ru"
+            "name": "userator"
         }
     ],
     "require": {
         "php": "~7.3.0",
-        "psr/log": "~1.1.0"
+        "psr/log": "~1.1.0",
+        "monolog/monolog": "~1.24.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~7.5.0"
     },
     "autoload": {
         "psr-4": {
             "TryAGI\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "TryAGI\\": "test/"
         }
     },
     "config": {
